--- a/index.html
+++ b/index.html
@@ -202,8 +202,20 @@
         <!-- Quem somos -->
         <div id="quem-somos">
             <h1>Quem somos</h1>
-            <h1>Veja nossas outras igrejas ENDEREÇO</h1>
-            aqui
+            <!-- <h1>Veja nossas outras igrejas ENDEREÇO</h1> -->
+            <p>Pouco tempo depois, Gunnar Vingren participou de uma convenção de igrejas batistas, em Chicago. Essas igrejas aceitaram o Movimento Pentecostal.</p>
+            <p>Ali ele conheceu outro jovem sueco que se chamava Daniel Berg. Esse jovem também fora batizado com o Espírito Santo.
+            </p>
+            <p>Após uma ampla troca de informações, experiências e idéias, Daniel Berg e Gunnar Vingren descobriram que Deus os estava guiando numa mesma direção, isto é: o Senhor desejava enviá-los com a mensagem do Evangelho a terras distantes, mas nenhum dos dois sabia exatamente para onde seriam enviados.</p>
+            <p>Algum tempo depois, Daniel Berg foi visitar o pastor Vingren em South Bend. Durante aquela visita, quando participavam de uma reunião de oração, o Senhor lhes falou, através de uma mensagem profética, que eles deveriam partir para pregar o Evangelho e as bênçãos do Avivamento Pentecostal. O lugar tinha sido mencionado na profecia: Pará. Nenhum dos presentes conhecia aquela localidade. Após a oração, os dois jovens foram a uma biblioteca à procura de um mapa que lhes indicasse onde o Pará estava localizado. Foi quando descobriram que se tratava de um estado do Norte do Brasil”. Extraído do livro História das Assembléias de Deus, Emílio Conde - CPAD</p>
+            <p>No início do século XX, apesar da presença de imigrantes alemães e suíços de origem protestante e do valoroso trabalho de missionários de igrejas evangélicas tradicionais, nosso país era ainda quase que totalmente católico.
+            A origem das Assembléias de Deus no Brasil está no fogo do reavivamento que varreu o mundo por volta de 1900, início do século 20, especialmente na América do Norte.</p>
+            <p>Os participantes desse reavivamento foram cheios do Espírito Santo da mesma forma que os discípulos e os seguidores de Jesus durante a Festa Judaica do Pentecostes, no início da Igreja Primitiva (Atos cap. 2). Assim, eles foram chamados de “pentecostais”.</p>
+            <p>Exatamente como os crentes que estavam no Cenáculo, os precursores do reavivamento do século 20 falaram em outras línguas que não as suas originais quando receberam o batismo no Espírito Santo. Outras manifestações sobrenaturais tais como profecia, interpretação de línguas, conversões e curas também aconteceram (Atos cap. 2).</p>
+            <p>Quando Daniel Berg e Gunnar Vingren, chegaram a Belém do Pará, em 19 de novembro de 1910, ninguém poderia imaginar que aqueles dois jovens suecos estavam para iniciar um movimento que alteraria profundamente o perfil religioso e até social do Brasil por meio da pregação de Jesus Cristo como o único e suficiente Salvador da Humanidade e a atualidade do Batismo no Espírito Santo e dos dons espirituais. As igrejas existentes na época – Batista de Belém do Pará, Presbiteriana, Anglicana e Metodista, ficaram bastante incomodadas com a nova doutrina dos missionários, principalmente por causa de alguns irmãos que se mostravam abertos ao ensino pentecostal. A irmã Celina de Albuquerque, na madrugada do dia 18 de junho de 1911 foi a primeira crente a receber o batismo no Espírito Santo, o que não demorou a ocorrer também com outros irmãos.</p>
+            <p>O clima ficou tenso naquela comunidade, pois um número cada vez maior de membros curiosos visitava a residência de Berg e Vingren, onde realizavam reuniões de oração. Resultado: eles e mais dezenove irmãos acabaram sendo desligados da Igreja Batista. Convictos e resolvidos a se organizar, fundaram a Missão de Fé Apostólica em 18 de junho de 1911, que mais tarde, em 1918, ficou conhecida como Assembléia de Deus.</p>
+            <p>Em poucas décadas, a Assembléia de Deus, a partir de Belém do Pará, onde nasceu, começou a penetrar em todas as vilas e cidades até alcançar os grandes centros urbanos como São Paulo, Rio de Janeiro, Belo Horizonte e Porto Alegre.</p>
+            <p>Em virtude de seu fenomenal crescimento, os pentecostais começaram a fazer diferença no cenário religioso brasileiro. De repente, o clero católico despertou para uma possibilidade jamais imaginada: o Brasil poderia vir a tornar-se, no futuro, uma nação protestante.</p>
         </div>
 
         <hr>
