--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@
                         <a href="#em-que-cremos">Em que cremos</a>
                     </li>
                     <li>
+                        <a href="">Nossas Igrejas</a>
+                    </li>
+                    <li>
                         <a href="#">Fotos</a>
                     </li>
                     <li>
-                        <a href="#">Eventos</a>
+                        <a href="#eventos">Eventos</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#">Escola Bíblica</a>
-                    </li>
+                    </li> -->
                     <li class="dropdown">
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Culto da Família<strong class="caret"></strong></a>
                       <ul class="dropdown-menu">
@@ -103,7 +106,7 @@
         <div class="headline">
             <div class="container my">
               <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                <img src="static/img/logo3.png" alt="">
+                <img src="static/img/logo.png" alt="">
               </div>
               <div>
                 <h1>Assembléia de Deus</h1>
@@ -118,29 +121,21 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Jumbotron Header -->
-        <!-- <header class="jumbotron">
-          <div class="row">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-              <img vspace="60" class="jumbotronwidth" src="static/img/logo.png" alt="">
-            </div>
-            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-              <h1>Assembléia de Deus</h1>
-              <h2>Ministério do Belém - Setor 2</h2>
-              <p>Avenida Augusto Antunes, 78 - Limoeiro - São Paulo - SP</p>
-              <p><a class="btn btn-primary btn-large">Saiba mais...</a></p>
-            </div>
-          </div>
-        </header> -->
-
         <hr>
 
         <!-- Title -->
-        <!-- <div class="row">
-            <div class="col-lg-12">
-                <h3>Latest Features</h3>
+        <div class="row jumbotron">
+            <div class="col-md-6">
+              <h2>Nossos Cultos:</h2>
+              <h3>Domingo das 18:00 às 20:00</h3>
+              <h3>Terça das 20:00 às 21:00</h3>
+              <h3>Quinta das 20:00 às 21:00</p>
             </div>
-        </div> -->
+            <div class="col-md-6">
+              <h2>Escola Bíblica:</h2>
+              <h3>Domingo das 9:00 às 10:20</h3>
+            </div>
+        </div>
         <!-- /.row -->
 
         <!-- Page Features -->
@@ -245,24 +240,40 @@
 
         <h1>Eventos</h1>
 
-        <div class="well">
+        <div id="eventos" class="well">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Março</h3>
-                    <span class="pull-right">10/03/17</span>
-                    <p>Aqui nós teremos um evento em breve.</p>
+                    <h2>Maio</h2>
+                    <span class="pull-right">Quinta, 18/05/17</span>
+                    <h3>Os Perigos Digitais</h3>
+                    <p><b>Local:</b> Sede</p>
+                    <p><b>Horário:</b> 20:00</p>
+
+                    <hr>
+
+                    <span class="pull-right">Sexta, 19/05/17</span>
+                    <h3>Relacionamento Pais e Filhos</h3>
+                    <p><b>Local:</b> Sede</p>
+                    <p><b>Horário:</b> 20:00</p>
+
+                    <hr>
+
+                    <span class="pull-right">Sábado, 20/05/17</span>
+                    <h3>O Casamento na Pós Modernidade - Jantar com os Casais</h3>
+                    <p><b>Local:</b> Hotel Matiz - Guarulhos</p>
+                    <p><b>Investimento:</b> R$ 180,00 o casal, em até 3x de R$ 60,00</p>
                 </div>
             </div>
 
-            <hr>
+            <!-- <hr>
             
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Abril</h3>
+                    <h2>Abril</h2>
                     <span class="pull-right">02/04/17</span>
                     <p>Aqui nós teremos um evento em breve.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <hr>
