--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="">Nossas Igrejas</a>
                     </li>
                     <li>
-                        <a href="#">Fotos</a>
+                        <a href="portfolio.html">Fotos</a>
                     </li>
                     <li>
                         <a href="#eventos">Eventos</a>
@@ -143,11 +143,11 @@
 
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <a href=""><img src="static/img/pexels-photo.jpg" alt=""></a>
+                    <a href="portfolio.html"><img src="static/img/pexels-photo.jpg" alt=""></a>
                     <div class="caption">
                         <h3>Fotos</h3>
                         <p>
-                            <a href="#" class="btn btn-primary">Saiba mais...</a>
+                            <a href="portfolio.html" class="btn btn-primary">Saiba mais...</a>
                         </p>
                     </div>
                 </div>
