--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="caption">
                         <h3>Fotos</h3>
                         <p>
-                            <a href="#" class="btn btn-primary">Saiba mais...</a>
+                            <a href="#" class="btn btn-primary">Saiba mais aqui...</a>
                         </p>
                     </div>
                 </div>
