texto numa foto

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 					<div id="main">
             <article class="thumb">
               <a href="static/img/fulls/00.jpg" class="image"><img src="static/img/thumbs/00.jpg" alt="" /></a>
-              <!-- <h2>Magna feugiat lorem</h2> -->
+              <h2>Pastor Ivan Souza falou em nome dos obreiros do setor 2 . Na igreja sede do Belém.</h2>
               <!-- <p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p> -->
             </article>
 						<article class="thumb">
