--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#em-que-cremos">Em que cremos</a>
                     </li>
                     <li>
-                        <a href="">Nossas Igrejas</a>
+                        <a href="igrejas.html">Nossas Igrejas</a>
                     </li>
                     <li>
                         <a href="portfolio.html">Fotos</a>
