link para o site de cadastro

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                           </li>
                       </ul>
                   </li>
+                    <li>
+                        <a href="http://robertomiltonsan.pythonanywhere.com/" target="_blank">Cadastro</a>
+                    </li>
 
                 </ul>
             </div>
